@@ -9,7 +9,7 @@ AM_LDFLAGS = -L$(top_builddir)/libpam -lpam \
 
 CLEANFILES = *~
 
-EXTRA_DIST = tst-pam_dispatch1.pamd tst-pam_dispatch2.pamd \
+EXTRA_DIST = run-xtests.sh tst-pam_dispatch1.pamd tst-pam_dispatch2.pamd \
 	tst-pam_dispatch3.pamd tst-pam_dispatch4.pamd \
 	tst-pam_cracklib1.pamd
 
@@ -18,28 +18,5 @@ XTESTS = tst-pam_dispatch1 tst-pam_dispatch2 tst-pam_dispatch3 \
 
 noinst_PROGRAMS = $(XTESTS)
 
-xtests: $(XTESTS)
-	@failed=0; pass=0; all=0; \
-	for testname in $(XTESTS) ; do \
-	  install -m 644 $$testname.pamd /etc/pam.d/$$testname ; \
-	  ./$$testname > /dev/null ; \
-	  if test $$? -ne 0 ; then \
-	    echo "FAIL: $$testname" ; \
-	    failed=`expr $$failed + 1`; \
-          else \
-	    echo "PASS: $$testname" ; \
-	    pass=`expr $$pass + 1`; \
-          fi ; \
-	  all=`expr $$all + 1` ; \
-	  rm -f /etc/pam.d/$$testname ; \
-	done ; \
-	if test "$$failed" -ne 0; then \
-	  echo "===================" ; \
-	  echo "$$failed of $$all tests failed" ; \
-	  echo "===================" ; \
-	  exit 1 ; \
-	else \
-	  echo "==================" ; \
-	  echo "All $$all tests passed" ; \
-	  echo "==================" ; \
-	fi
+xtests: $(XTESTS) run-xtests.sh
+	$(srcdir)/run-xtests.sh
